<resources>
    <string name="app_name">Agenda Plus Plus</string>
    <string name="title_activity_main_navigation_drawer">Agenda++</string>
    <string name="navigation_drawer_open">Abrir menu de navegação</string>
    <string name="navigation_drawer_close">Fechar menu de navegação</string>
    <string name="nav_header_title">Agenda++</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Cabeçalho de navegação</string>
    <string name="action_settings">Configurações</string>

    <!-- Strings for Drawer -->
    <string name="calendar_option">Calendário</string>
    <string name="tasks_option">Tarefas</string>
    <string name="events_option">Eventos</string>
    <string name="projects_option">Projetos</string>
    <string name="manage_option">Configurações</string>

    <!-- Strings related to login -->
    <string name="title_activity_login">Entrar</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Senha</string>
    <string name="action_sign_in">Entrar ou registrar</string>
    <string name="action_sign_in_short">Entrar</string>
    <string name="error_invalid_email">Este email é inválido</string>
    <string name="error_invalid_password">Essa senha é muito curta</string>
    <string name="error_incorrect_password">Senha incorreta</string>
    <string name="error_field_required">Este campo é obrigatório</string>
    <string name="permission_rationale">"Permissões de contato são necessárias para completar email
        automaticamente."
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
