<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">


    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_calendar"
            android:icon="@drawable/ic_menu_calendar"
            android:title="@string/calendar_option" />
        <item
            android:id="@+id/nav_tasks"
            android:icon="@drawable/ic_menu_tasks"
            android:title="@string/tasks_option" />
        <item
            android:id="@+id/nav_events"
            android:icon="@drawable/ic_menu_events"
            android:title="@string/events_option" />
        <item
            android:id="@+id/nav_projects"
            android:icon="@drawable/ic_menu_projects"
            android:title="@string/projects_option" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/manage_option" />
    </group>

</menu>
